style.css
  body {
    margin: 0;
    overflow: hidden;
    font-family: 'Lexend', sans-serif;
    background-image: url(./images/banners/home_page.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;  
    background-size: cover;
    background-position: center;
}

#home-button {
    position: fixed;
    left: 1vw;
    top: 1vw;
    color: rgb(255, 255, 255, 0.8);
    font-size: 1vw;
    cursor:pointer;
}

#container {
    position: fixed;
    width: 65vw; 
    height: 65vh; 
    border-radius: 45px;
    background: rgba(255, 255, 255, 0.2); 
    backdrop-filter: blur(10px); 
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    justify-content: center;
    align-items: center;
}

#toast-image {
    position: fixed;
    width: 50%; 
    height: 50%; 
    object-fit: contain; 
    left: 0vw;
    top: 16vh;
    border: 0.8% solid #ffffff;
    transition: transform 0.3s ease-in-out;
}

#toast-text {
    font-size: 2.5vw;
    position: fixed;
    left: 7vw;
    top: 36vh;
    color: rgb(20, 20, 20);
}

#contact-me {
    font-size: 2.5vw;
    position: fixed;
    left: 9vw;
    top: 36vh;
    color: rgb(20, 20, 20);
}

#contacts {
    position: fixed;
    font-size: 1.8vw;
    right: 10vw;
}

h1 {
    position: fixed;
    right: 15vw;
    top: 13vh;
    font-size: 1.3vw;
}

#description {
    position: fixed;
    top: 19vh;
    right: 5vw;
    font-size: 1.2vw;
    word-break: break-word;
    width: 50%;
}

.icon {
    font-size: 4vw;
    color: rgba(0, 0, 0, 0.8); 
    text-shadow: 3 4px 6px rgba(0, 0, 0, 0.1);
    cursor: pointer;
}

#user-icon {
    position: fixed;
    right: 38vw;
    bottom: 17vw;
    rotate: 10deg;
}

#cube-icon {
    position: fixed;
    right: 45vw;
    bottom: 21vw;
    rotate: -7deg;
}

#code-icon {
    position: fixed;
    right: 29vw;
    bottom: 18.5vw;
    rotate: -1deg;
}

#shadowforms {
    position: fixed;
    left: 100vw;
    top: 20vh;
}

.datapack-image {
    border-radius: 45px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
    width: 15vw;
    height: auto;
}

#datapacks-text {
    font-size: 2.5vw;
    position: fixed;
    left: 5vw;
    top: 3vh;
    color: rgb(20, 20, 20);
    z-index: 2;
}

@media only screen and (max-width: 800px) {
    #user-icon {
        position: fixed;
        right: 38vw;
        bottom: 39vw;
        rotate: 10deg;
    }
    
    #cube-icon {
        position: fixed;
        right: 45vw;
        bottom: 44vw;
        rotate: -7deg;
    }
    
    #code-icon {
        position: fixed;
        right: 29vw;
        bottom: 41.5vw;
        rotate: -1deg;
    }
}

/* 
SMALLER SCREEN WIDTH
*/

@media only screen and (max-width: 700px) {
    #toast-image {
        position: fixed;
        width: 50%; 
        height: 50%; 
        object-fit: contain; 
        left: 0vw;
        top: -4vh;
        border: 0.8% solid #ffffff;
        transition: transform 0.3s ease-in-out;
    }

    #toast-text {
        font-size: 4vw;
        position: fixed;
        left: 27vw;
        top: 11vh;
        color: rgb(20, 20, 20);
    }

    #contact-me {
        font-size: 4vw;
        position: fixed;
        left: 27vw;
        top: 9vh;
        color: rgb(20, 20, 20);
    }

    #toast-text {
        font-size: 4vw;
        position: fixed;
        left: 29vw;
        top: 11vh;
        color: rgb(20, 20, 20);
    }

    h1 {
        position: fixed;
        right: 17vw;
        top: 26vh;
        font-size: 3vw;
    }
    
    #description {
        position: fixed;
        top: 30vh;
        right: 6vw;
        font-size: 2.5vw;
        word-break: break-word;
        width: 80%;
    }

    #contacts {
        position: fixed;
        top: 30vh;
        right: 6vw;
        font-size: 4vw;
        word-break: break-word;
        width: 80%;
    }

    .icon {
        font-size: 8vw;
    }
    
    #cube-icon {
        position: fixed;
        left: 25vw;
        bottom: 51vw;
        rotate: -7deg;
    }
    
    #user-icon {
        position: fixed;
        left: 47vw;
        bottom: 49vw;
        rotate: 10deg;
    }
    
    #code-icon {
        position: fixed;
        left: 64vw;
        bottom: 51.5vw;
        rotate: -1deg;
    }
}

